syntax = "proto3";
package gopi;

import "google/protobuf/empty.proto";

// The greeting service definition
service Greeter {
  // Simple ping method to show server is "up"
  rpc Ping (google.protobuf.Empty) returns (google.protobuf.Empty);

  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
